Change images and add lose condition
If you match the hawk or the owl, you lose now.

--- a/memory-game-master/index.html
+++ b/memory-game-master/index.html
@@ -7,8 +7,8 @@
   <script src="app.js" charset="utf-8"></script>
 </head>
 <body>
-
-  <h3>Score:<span id="result"></span></h3>
+  <h2>Match all the birds. But don't get match the hawk or the owl or you'll lose</h2>
+  <h3>Score: <span id="result"></span></h3>
 
   <div class="grid">
   </div>
